[package]
name = "doom-fish-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/doom-fish-utils"
repository = "https://github.com/doom-fish/doom-fish-utils"
description = "Framework-agnostic FFI utilities shared by the doom-fish Apple-SDK Rust bindings: async/sync completion handlers, FFI string helpers, FourCharCode, panic-safe extern-C wrappers, and executor-agnostic bounded async streams."
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["macos", "ffi", "apple", "async", "doom-fish"]
categories = ["api-bindings", "asynchronous", "os::macos-apis"]
rust-version = "1.70"
readme = "README.md"
include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "doom_fish_utils"
crate-type = ["lib"]

[features]
default = []
# Provides a `futures_core::Stream` impl on `BoundedAsyncStream<T>` so the
# stream can be used directly with `futures::StreamExt` / `tokio_stream`.
# Off by default to keep the dependency footprint minimal.
futures-stream = ["dep:futures-core"]

[dependencies]
futures-core = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = "full"
